<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.carros.RegistroCarros">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/registro_carros"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPlaca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Placa"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spnMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" />

    <Spinner
        android:id="@+id/spnModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" />

    <Spinner
        android:id="@+id/spnColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" />

    <EditText
        android:id="@+id/txtPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Precio"
        android:inputType="number"
        android:padding="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="guardar"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/borrar" />
    </LinearLayout>

</LinearLayout>
